fix: 🐛 grid gap reduced to 0.25rem

--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,7 @@
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  grid-gap: 0.5rem;
+  grid-gap: 0.25rem;
 }
 @media only screen and (max-width: 768px) {
   .gallery {
